<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mortgage Calculator</string>
	<string name="purchase_price">Purchase Price</string>
	<string name="down_payment">Down Payment</string>
	<string name="interest_rate">Interest Rate</string>
	<string name="monthly_payment">Monthly Payment</string>
	<string name="custom_amount">Custom Amount</string>
	<string name="custom_payment_amount">Custom Payment Amount</string>
	<string name="zero">0.00</string>
	<string name="fifteen">15</string>
	<string name="ten">10</string>
	<string name="twenty">20</string>
	<string name="thirty">30</string>
	
</resources>
