<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tableLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:padding="5dp"
    android:shrinkColumns="1,2,3" >

    <!-- row for entering purchase price -->
    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/purchasepricetextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center"
            android:text="@string/purchase_price"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/purchasepriceeditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_span="3"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal" />

    </TableRow>

    <!-- row for entering down payment -->
    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/downpaymenttextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center"
            android:text="@string/down_payment"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/downpaymenteditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_span="3"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal" />

    </TableRow>

    <!-- row for entering interest rate -->
    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/interestratetextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center"
            android:text="@string/interest_rate"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/interestrateeditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_span="3"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal" />

    </TableRow>

    <!-- row for numbers indicating years -->
    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tentextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="center"
            android:text="@string/ten"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/twentytextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/twenty"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/thirtytextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/thirty"
            android:textSize="14sp" />

    </TableRow>

    <!-- Row for calculated monthly payments -->
    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/monthlypaymenttextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center"
            android:text="@string/monthly_payment"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/monthlypayment10editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:clickable="false"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="numberDecimal"
            android:longClickable="false"
            android:text="@string/zero" />

        <EditText
            android:id="@+id/monthlypayment20editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:clickable="false"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="numberDecimal"
            android:longClickable="false"
            android:text="@string/zero" />

        <EditText
            android:id="@+id/monthlypayment30editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:clickable="false"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="numberDecimal"
            android:longClickable="false"
            android:text="@string/zero" />

    </TableRow>

    <!-- Row for seeker bar and custom amount -->
    <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/customtextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center"
            android:text="@string/custom_amount"
            android:textSize="14sp" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:layout_weight="1"
            android:focusable="false"
            android:max="50"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:progress="15" />

        <TextView
            android:id="@+id/customyearstextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/fifteen"
            android:textSize="14sp" />

    </TableRow>

    <!-- Row for calculated custom amount -->
    <TableRow
        android:id="@+id/tableRow7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/custompaymenttextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_span="2"
            android:text="@string/custom_payment_amount"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/custompaymenteditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_gravity="center"
            android:layout_span="2"
            android:layout_weight="1"
            android:clickable="false"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="numberDecimal"
            android:longClickable="false"
            android:text="@string/zero" />

    </TableRow>

</TableLayout>
